@@ -69,6 +69,22 @@ name|ivy
 operator|.
 name|core
 operator|.
+name|search
+operator|.
+name|SearchEngine
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
 name|settings
 operator|.
 name|IvySettings
@@ -88,6 +104,22 @@ operator|.
 name|matcher
 operator|.
 name|PatternMatcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|resolver
+operator|.
+name|DependencyResolver
 import|;
 end_import
 
@@ -151,6 +183,10 @@ decl_stmt|;
 specifier|private
 name|String
 name|value
+decl_stmt|;
+specifier|private
+name|String
+name|resolver
 decl_stmt|;
 specifier|public
 name|String
@@ -322,6 +358,30 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|setResolver
+parameter_list|(
+name|String
+name|resolver
+parameter_list|)
+block|{
+name|this
+operator|.
+name|resolver
+operator|=
+name|resolver
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getResolver
+parameter_list|()
+block|{
+return|return
+name|resolver
+return|;
+block|}
+specifier|public
+name|void
 name|doExecute
 parameter_list|()
 throws|throws
@@ -416,11 +476,39 @@ operator|.
 name|getSettings
 argument_list|()
 decl_stmt|;
+name|SearchEngine
+name|searcher
+init|=
+operator|new
+name|SearchEngine
+argument_list|(
+name|settings
+argument_list|)
+decl_stmt|;
+name|PatternMatcher
+name|patternMatcher
+init|=
+name|settings
+operator|.
+name|getMatcher
+argument_list|(
+name|matcher
+argument_list|)
+decl_stmt|;
 name|ModuleRevisionId
 index|[]
 name|mrids
-init|=
-name|ivy
+decl_stmt|;
+if|if
+condition|(
+name|resolver
+operator|==
+literal|null
+condition|)
+block|{
+name|mrids
+operator|=
+name|searcher
 operator|.
 name|listModules
 argument_list|(
@@ -437,14 +525,64 @@ argument_list|,
 name|revision
 argument_list|)
 argument_list|,
+name|patternMatcher
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|DependencyResolver
+name|depResolver
+init|=
 name|settings
 operator|.
-name|getMatcher
+name|getResolver
 argument_list|(
-name|matcher
-argument_list|)
+name|resolver
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|depResolver
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"Unknown resolver: "
+operator|+
+name|resolver
+argument_list|)
+throw|;
+block|}
+name|mrids
+operator|=
+name|searcher
+operator|.
+name|listModules
+argument_list|(
+name|depResolver
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+name|branch
+argument_list|,
+name|revision
+argument_list|)
+argument_list|,
+name|patternMatcher
+argument_list|)
+expr_stmt|;
+block|}
 for|for
 control|(
 name|int
